[package]
name = "AEC"
version = "0.1.0"
authors = ["NaOH-de"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.12"
anyhow = "1.0.12"
ringbuf = "0.1.6"
npy = "0.4"
smallvec = "1.4"
circular-queue = "0.2.6"
rand = "0.7"
rand_distr = "0.3"
