[package]
name = "aec"
version = "0.1.0"
authors = ["NaOH-de"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.12"
anyhow = "1.0.12"
ringbuf = "0.1.6"
npy = "0.4"
circular-queue = "0.2.6"
rand = "0.7"
rand_distr = "0.3"
minifb = "0.13.0"
plotters = {version = "^0.3.0", default_features = false, features = ["ttf"]}
plotters-bitmap = {version = "^0.3.*", default_features = false}
packed_simd = "0.3.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path = "src\\benches\\my_benchmark.rs"
harness = false

[profile.release]
debug = true
