[package]
name = "raec"
version = "0.1.0"
authors = ["SCingolani"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
cpal = "0.12"
anyhow = "1.0.12"
ringbuf = "0.1.6"
npy = "0.4"
circular-queue = "0.2.6"
rand = "0.7"
rand_distr = "0.3"
minifb = "0.13.0"
plotters = {version = "^0.3.0", default_features = false, features = ["ttf"]}
plotters-bitmap = {version = "^0.3.*", default_features = false}
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
float-cmp = "0.8.0"
itertools = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path = "src\\benches\\my_benchmark.rs"
harness = false

[profile.release]
debug = true
